<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="10dp">
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"/>
	
	<EditText
			android:id="@+id/nameEditText"
			android:layout_marginBottom="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:ignore="Autofill,LabelFor,TextFields" />
	
	
	<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/recipient"/>
	
	<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:text="@string/donor" />
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/username"/>
	
	<EditText
			android:id="@+id/usernameEditText"
			android:layout_marginBottom="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:ignore="Autofill,LabelFor,TextFields" />
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/password"/>
	
	<EditText
			android:id="@+id/passwordEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="50dp"
			android:inputType="textPassword"
			tools:ignore="Autofill,LabelFor,TextFields" />
	
	<Button
			android:id="@+id/registerButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/sign_up"/>


</LinearLayout>