<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linearLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<TextView
		android:id="@+id/My_Items"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:baselineAligned="false"
		android:text="@string/my_items"
		android:textAlignment="center"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/postItem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="32dp"
		android:text="Post New Item"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/My_Items"
		app:layout_constraintVertical_bias="0.0" />

	<ToggleButton
		android:id="@+id/toggleButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="8dp"
		android:textOff="@string/current_postings"
		android:textOn="@string/past_postings"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/My_Items"
		app:layout_constraintVertical_bias="0.0" />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="87dp"
		android:layout_height="78dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:contentDescription="@string/todo"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.075"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toggleButton"
		app:layout_constraintVertical_bias="0.075"
		tools:srcCompat="@mipmap/ic_launcher_round" />

	<EditText
		android:id="@+id/itemPosting"
		android:layout_width="164dp"
		android:layout_height="47dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/item_description"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toEndOf="@+id/imageView"
		app:layout_constraintTop_toBottomOf="@+id/My_Items"
		app:layout_constraintVertical_bias="0.213" />

	<Button
		android:id="@+id/EditPost"
		android:layout_width="85dp"
		android:layout_height="41dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="16dp"
		android:text="@string/edit"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.24"
		app:layout_constraintStart_toEndOf="@+id/itemPosting"
		app:layout_constraintTop_toBottomOf="@+id/My_Items"
		app:layout_constraintVertical_bias="0.21" />
</androidx.constraintlayout.widget.ConstraintLayout>